fix: add margin-bottom to window class for improved spacing

--- a/photos/data/css/main.css
+++ b/photos/data/css/main.css
@@ -128,6 +128,7 @@ body {
 .window {
     background-color: #333;
     border: solid;
+    margin-bottom: 0.5rem;
     border-color: #7CB0FF;
     color: #f3f4f5;
     display: flex;
